--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/201713511918_.pic.jpg"
+  avatar           : "photo.jpg"
   name             : "Xiaoyang Xie"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Peking University Undergraduate"
   location         : "Earth"
   employer         : "Peking University"
   uri              : # URL
