--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "photo.jpg"
   name             : "Xiaoyang Xie"
   pronouns         : # example: "she/her"  
-  bio              : "Princeton University graduate students"
+  bio              : "Graduate Student"
   location         : "Princeton, NJ"
   employer         : "Princeton University"
   uri              : # URL
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : # Username
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
